# MovementScreen

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  capacitor.config.json  main.py  package-lock.json  package.json  pyproject.toml  requirements.prod.txt  requirements.txt  server.py  start.sh
.claude/: settings.local.json
android/app/: build.gradle
android/app/src/main/res/values/: strings.xml
db/: init.sql  liquibase.properties  migrate_existing.py  migrate_existing.sql  schema_init.py  seed_admin_dev.py  seed_admin_dev.sql
db/changelog/: db.changelog-root.xml
db/changelog/changes/: 001-create-users.xml  002-create-assessments.xml  003-create-findings.xml  004-create-angle-stats.xml  005-add-is-admin-to-users.xml  006-create-threshold-config.xml
movementscreen/: auth.py  config.py  database.py  thresholds.py
movementscreen/analysis/: aggregator.py  compensation.py  joint_angles.py
movementscreen/capture/: video_pipeline.py
movementscreen/pose/: estimator.py  landmarks.py
movementscreen/report/: reporter.py
movementscreen/screens/: base_screen.py  lunge.py  overhead_reach.py  squat.py
movementscreen/utils/: geometry.py
scripts/: build.js
static/: app.js  index.html  manifest.json  style.css  sw.js
static/analysis/: aggregator.js  compensation.js  geometry.js  joint_angles.js  movement_summary.js  screens.js  thresholds.js
static/db/: local_db.js
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_compensation.py  test_geometry.py  test_joint_angles.py
(+1 files in other folders)
