[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "movementscreen"
version = "0.1.0"
description = "Computer-vision based movement screening and compensation analysis"
requires-python = ">=3.9"
dependencies = [
    "mediapipe>=0.10.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "dataclasses-json>=0.6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
